# Elijah

./: nginx.conf  projects.db
server/: .env  Cargo.toml
server/keys/: paseto  paseto.pub
server/pages/draft/: home.html  test.html
server/pages/live/: home.html
server/sql/: projects.sql  triggers.sql
server/src/: main.rs
server/src/admin/: draft.rs  index.rs  mod.rs
server/src/auth/: dto.rs  endpoint.rs  mod.rs  models.rs  service.rs  template.rs
server/src/blocks/: config.rs  mod.rs  properties.rs  template.rs
server/src/forms/: endpoint.rs  mod.rs  service.rs  template.rs
server/static/html/: forms.html  index.html  login.html  project.html  projects.html  site-editor.html  users.html
server/static/script/: angled.js  bynder.js  content-entry-update.js  control-menu.js  header-photo-update.js  labels.js  nav.js  open_image.js  prompt.js  scrollyfills.js  sound-effect.js  swiped-events.js  text-editor.js  thumbnail.js
server/static/style/: accordion-content.css  add-content-entry.css  companies_overview.css  control-menu.css  core-numbers.css  errors.css  forms.css  index.css  lightbox.css  login.css  main-content.css  nav.css  page-bottom-settings.css  page.css  popup.css  project-banner.css  project_page.css  projects.css  projects_overview.css  save-changes.css  site-editor-pages.css  site-editor.css  text.css  titillium.css  tms.css  users.css
sites/: .env  Cargo.toml  domains.json
sites/src/: company_data.rs  company_extractor.rs  db_connection_extractor.rs  main.rs  search.rs
sites/src/cookies/: endpoint.rs  mod.rs  service.rs  template.rs
sites/src/forms/: endpoint.rs  mod.rs  recaptcha.rs  service.rs  structs.rs  template.rs
sites/src/projecten/: endpoint.rs  mod.rs  service.rs  template.rs
sites/static/general/: banner-0.css  content-0.css  cookie-banner.html  cookie-policy.html  cookie.css  copyright.css  disclaimer.html  fonts.css  footer.html  form-0.html  gtm.html  head.html  header-title.css  header.css  in-de-kijker.js  index.css  index.html  lightbox.css  lightbox.js  main-0.css  main-content.css  map.css  nav.css  nav.html  nav.js  photo-text.css  privacy-policy.html  privacy.css  project-carousel.css  project.html  project_page.css  projecten-filter.html  projecten-filter.js  projecten.css  projecten.html  recaptcha.js  wie-we-zijn.html  youtube-embed.js
sites/static/test.localhost/: footer-info.html  gtm_id  (+7 more)
(+154 files in other folders)
