[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "matched-path", "multipart", "original-uri"] }
axum-extra = { version = "0.10.0", features = ["cookie", "form", "query"] }
axum-response-cache = "0.2.0"
serde = { version = "1.0.218", features = ["serde_derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.139"
serde_with = "3.12.0"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.3", features = ["chrono", "migrate", "runtime-tokio", "sqlite", "time", "uuid"] }
templr = { version = "0.2.4", features = ["axum"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = { version = "1.16.0", features = ["v4"] }
maud = { version = "0.27.0", features = ["axum"] }
url = "2.5.4"
serde_qs = { version = "0.15.0", features = ["axum"] }
async-trait = "0.1.88"
dotenv = "0.15.0"
totp = "0.4.0"
otpauth = "0.5.1"
paseto_maker = "0.2.1"
bcrypt = "0.17.0"
rand = "0.9.1"
qrcode = "0.14.1"
rusty_paseto = "0.7.2"
cookie = "0.18.1"
pasetors = "0.7.6"
oauth2 = "5.0.0"
itertools = "0.14.0"
serde-aux = "4.7.0"
chrono = { version = "0.4.41", features = ["serde"] }
tl = "0.7.8"
lazy_static = "1.5.0"
once_cell = "1.21.3"
byteorder = "1.5.0"
kuchikiki = "0.8.2"
markup5ever = "0.11.0"
regex = "1.11.1"
