[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["matched-path", "original-uri"] }
axum-extra = { version = "0.10.0", features = ["cookie", "query"] }
axum-response-cache = "0.2.0"
serde = "1.0.218"
serde-xml-rs = "0.6.0"
serde_json = "1.0.139"
serde_with = "3.12.0"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "uuid"] }
templr = { version = "0.2.4", features = ["axum"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = { version = "1.16.0", features = ["v4"] }
maud = { version = "0.27.0", features = ["axum"] }
url = "2.5.4"
serde_qs = { version = "0.15.0", features = ["axum"] }
async-trait = "0.1.88"
mail-send = "0.5.1"
lettre = "0.11.16"
dotenv = "0.15.0"
reqwest = { version = "0.12.19", features = ["json"] }
